First post draft

--- a/public/blog/template/index.html
+++ b/public/blog/template/index.html
@@ -5,33 +5,31 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Blogs | jieqi&#39;s archive</title>
-<meta name="title" content="Blogs" />
+<title>jieqi&#39;s archive</title>
+<meta name="title" content="jieqi&#39;s archive" />
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 
 
-<meta property="og:url" content="http://localhost:1313/blog/">
+<meta property="og:url" content="http://localhost:1313/blog/template/">
   <meta property="og:site_name" content="jieqi&#39;s archive">
-  <meta property="og:title" content="Blogs">
+  <meta property="og:title" content="jieqi&#39;s archive">
   <meta property="og:locale" content="en_us">
-  <meta property="og:type" content="website">
+  <meta property="og:type" content="article">
+    <meta property="article:section" content="blog">
 
 
 
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Blogs">
+  <meta name="twitter:title" content="jieqi&#39;s archive">
 
 
 
 
-  <meta itemprop="name" content="Blogs">
-  <meta itemprop="datePublished" content="2025-05-05T00:00:00+00:00">
-  <meta itemprop="dateModified" content="2025-05-05T00:00:00+00:00">
+  <meta itemprop="name" content="jieqi&#39;s archive">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/blog/index.xml" title="jieqi's archive" />
   <style>
   :root {
       --width: 720px;
@@ -192,41 +190,22 @@
 </nav>
 </header>
   <main>
+
+<h1></h1>
+<p>
+  <i>
+    <time datetime='0001-01-01'>
+      01 Jan, 0001
+    </time>
+  </i>
+</p>
+
 <content>
   
-  <ul class="blog-posts">
-    
-    <li>
-      <span>
-        <i>
-          <time datetime='2025-05-05'>
-            05 May, 2025
-          </time>
-        </i>
-      </span>
-      <a href="http://localhost:1313/blog/copy-move-semantics/">The Semantics of Move and Copy</a>
-    </li>
-    
-    <li>
-      <span>
-        <i>
-          <time datetime='1025-05-05'>
-            05 May, 1025
-          </time>
-        </i>
-      </span>
-      <a href="http://localhost:1313/blog/stuff/">Template Post</a>
-    </li>
-    
-  </ul>
-  
-    <small>
-      <div>
-        
-      </div>
-    </small>
-    
 </content>
+<p>
+  
+</p>
 
   </main>
   <footer>Adapted from <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>
